<package>
    <name>collision_recovery</name>
    <version>0.1.0</version>
    <description>

        collision_recovery

    </description>
    <author>Dimitrios Kirtsios</author>
    <maintainer email="dimkirts@gmail.com">Dimitrios Kirtsios</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>pluginlib</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>base_local_planner</run_depend>
    <run_depend>pluginlib</run_depend>

    <export>
        <nav_core plugin="${prefix}/collision_recovery_plugin.xml" />
    </export>

</package>
